--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="slideshow">
 			<canvas width="1" height="1" id="container" style="position:absolute"></canvas>
 			<!-- Heavy Rain -->
-			<div class="slide" id="slide-1" data-weather="drizzle">
+			<div class="slide" id="slide-1" data-weather="rain">
 				<div class="slide__element slide__element--date">Sunday, 24<sup>th</sup> of October 2043</div>
 				<div class="slide__element slide__element--temp">12°<small>C</small></div>
 			</div>
