--- a/index.html
+++ b/index.html
@@ -23,20 +23,13 @@
 	<div class="image-preload">
 		<img src="img/drop-color.png" alt="">
 		<img src="img/drop-alpha.png" alt="">
-		<img src="img/weather/texture-rain-fg.png" />
-		<img src="img/weather/texture-rain-bg.png" />
-		<img src="img/weather/texture-sun-fg.png" />
-		<img src="img/weather/texture-sun-bg.png" />
-		<img src="img/weather/texture-fallout-fg.png" />
-		<img src="img/weather/texture-fallout-bg.png" />
-		<img src="img/weather/texture-drizzle-fg.png" />
-		<img src="img/weather/texture-drizzle-bg.png" />
+		<img src="img/weather/1.jpg" />
 	</div>
 	<div class="container">
 		<div class="slideshow">
 			<canvas width="1" height="1" id="container" style="position:absolute"></canvas>
 			<!-- Heavy Rain -->
-			<div class="slide" id="slide-1" data-weather="rain">
+			<div class="slide" id="slide-1" data-weather="drizzle">
 				<div class="slide__element slide__element--date">Sunday, 24<sup>th</sup> of October 2043</div>
 				<div class="slide__element slide__element--temp">12°<small>C</small></div>
 			</div>
