--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<p class="nosupport">Sorry, but your browser does not support WebGL!</p>
 	</div>
 	<!-- /container -->
-	<script src="js/index.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
