--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</div>
 	<div class="container">
 		<div class="slideshow">
-			<canvas width="1" height="1" id="container" style="position:absolute"></canvas>
+			<canvas width="1" height="1" id="container"></canvas>
 			<!-- Heavy Rain -->
 			<div class="slide" id="slide-1" data-weather="drizzle">
 				<div class="slide__element slide__element--date">Sunday, 24<sup>th</sup> of October 2043</div>
