--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 	<div class="container">
 		<div class="slideshow">
 			<canvas width="1" height="1" id="container"></canvas>
+			<!-- Heavy Rain -->
+			<div class="slide" id="slide-1" data-weather="storm">
+
+			</div>
 
 		</div>
 		<p class="nosupport">Sorry, but your browser does not support WebGL!</p>
