--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Rain Effect Experiments | Demo 1 | Codrops</title>
+	<title>Для тебя...</title>
 	<meta name="description" content="Some WebGL experiments with raindrop effects" />
 	<meta name="keywords" content="webgl, raindrops, effect, rain, web, video, background" />
 	<meta name="author" content="Lucas Bebber for Codrops" />
-	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/style1.css" />
@@ -36,8 +35,7 @@
 			<canvas width="1" height="1" id="container"></canvas>
 			<!-- Heavy Rain -->
 			<div class="slide" id="slide-1" data-weather="drizzle">
-				<div class="slide__element slide__element--date">Sunday, 24<sup>th</sup> of October 2043</div>
-				<div class="slide__element slide__element--temp">12°<small>C</small></div>
+				<div class="slide__element slide__element--date">Скучаю...</div>
 			</div>
   
 		</div>
